added code comments to python and javascript

--- a/euphonia/web/js/.jshintrc
+++ b/euphonia/web/js/.jshintrc
@@ -1,11 +1,12 @@
 {
-  // ENVIRONMENTS
   "browser": true,
   "node": true,
   "globals": {
     "$":false,
     "jquery":false,
     "angular":false,
-    "prettyprint":false
+    "prettyprint":false,
+    "Handlebars":false,
+    "Bloodhound":false
   }
 }
