--- a/euphonia/tests.yml
+++ b/euphonia/tests.yml
@@ -319,14 +319,14 @@
     priority: "low"
     src: "mmsgroupreports"
   - 
-    active: true
+    active: false
     comment: "You have at least one MongoS instance running with the --noAutoSplit option, which is not recommended for production deployments."
     header: "MongoS noAutoSplit"
     name: "MongosNoAutoSplit"
     priority: "medium"
     src: "pings"
   - 
-    active: true
+    active: false
     comment: "You have a large amount of non-mapped memory, which means you are doing a lot of in-memory work"
     header: "MongoDB: Large Non-Mapped Memory"
     name: "LargeNonMappedMemory"
@@ -358,5 +358,12 @@
     comment: "You have [[N_AFFECTED_HOSTS]] host(s) in the [[MMS_GROUP_ANCHOR]] MMS Group reporting a non-zero value for the diaglog commandline option. Enabling diagnostic logging can have a performance, and is not recommended for normal production operation."
     header: "MongoDB Best Practices: Diagnostic Logging"
     name: "DiagLogGreaterThanZero"
+    priority: "medium"
+    src: "pings"
+  - 
+    active: false
+    comment: "You have a large proportion of failed queries, more than 0.5%"
+    header: "TimedoutCursors"
+    name: "TimedoutCursors"
     priority: "medium"
     src: "pings"
