TSPROJ-99: Ops per second

--- a/euphonia/tests.yml
+++ b/euphonia/tests.yml
@@ -374,3 +374,10 @@
     name: "ChangeInJournalCommitsInWriteLock"
     priority: "medium"
     src: "pings"
+  -
+    active: true
+    comment: "Your operations per second have recently more than doubled. This could be an indication of an unusually high load on your application or potentially misfiring queries."
+    header: "High Operations Per Second"
+    name: "HighOpsPerSecond"
+    priority: "medium"
+    src: "pings"
